# QwAnalysis

./: CMakeLists.txt  Doxyfile  GNUmakefile  PackageInfo.dox  PackageInfo.txt  manual_factory.pl  qwanalysis_mod.C  qweak-config.in
Analysis/include/: MCodaControlEvent.h  MQwCodaControlEvent.h  MQwDataElements.h  MQwF1TDC.h  MQwHistograms.h  MQwMockable.h  MQwSIS3320.h  MQwSIS3320_Accumulator.h  MQwSIS3320_Channel.h  MQwSIS3320_Module.h  MQwSIS3320_Samples.h  MQwSIS3320_SamplesLinkDef.h  MQwSIS3801_Channel.h  MQwSIS3801_Module.h  MQwV775TDC.h  QwASCIIEventBuffer.h  QwAnalysis.h  QwCPV1495_Channel.h  QwColor.h  QwCommandLine.h  QwControl.h  QwControlLinkDef.h  QwCorrelator.h  QwDBInterface.h  QwDatabase.h  QwEPICSEvent.h  QwEventBuffer.h  QwF1TDContainer.h  (+49 more)
Extensions/Compton/RunMacros/: CMakeLists.txt  RunMacros.cc
Extensions/Compton/RunMacros/cmake/modules/: FindMYSQLPP.cmake  FindQwAnalysis.cmake  FindROOT.cmake  RunMacros.cmake
Extensions/Compton/RunMacros/include/: ComptonDatabase.h  ComptonSession.h  VComptonMacro.h
Extensions/Compton/RunMacros/src/: ComptonDatabase.cc  ComptonSession.cc  VComptonMacro.cc
Extensions/ValerianROOT/: CMakeLists.txt  Comple_ValerianROOT.sh  README.txt  Run_It_All.sh  ValerianROOT.cc  ValerianROOTTreeMaker.cc  ValerianROOTVariables.txt  magic_line.txt
Extensions/ValerianROOT/cmake/modules/: FindROOT.cmake
Extensions/ValerianROOT/include/: Angle.h  BeamPositionX.h  BeamPositionY.h  Chi.h  GoodTrack.h  LogChi.h  NTrigger.h  PartialTrackChi2.h  PartialTrackSlope.h  PercentGood.h  PosOnBar.h  Q2PhiMatch.h  Q2PhiMatchProj.h  Q2ThetaMatch.h  Q2ThetaMatchProj.h  Q2WithCut.h  Q2WithLoss.h  Q2WithOutLoss.h  QTOR.h  R2Pkg1.h  R2Pkg2.h  R3PhiOffset.h  R3Pkg1.h  R3Pkg2.h  R3ThetaOffset.h  RawTrack.h  Residual.h  Run.h  ScatEnergy.h  TrackChi2.h  TrackSlope.h  TreelineChi2.h  TreelineSlope.h
Extensions/ValerianROOT/include/linkdef/: ValerianLinkDef.h
Extensions/ValerianROOT/macros/: Example.C  LightweightingFactor_vs_Run.C  PositionAndAngleScanAnal.C  Q2_vs_Run.C  Q2_vs_Run_BeamPositionCorrected.C  Q2_vs_Run_typical_ROOT_method.C  QTOR_Values.C  Read_In_Run_Numbers.h  RunNumberList.C  Theta_vs_Run.C  TreeMatch_vs_Run.C  less_than_but_non_zero.h
Extensions/ValerianROOT/runlists/: Oct1and5_QTOR8880A_Run2.txt  Runlist_Discriptions.txt  runlist_10.txt  runlist_11.txt  runlist_12.txt  runlist_13.txt  runlist_14.txt  runlist_15.txt  runlist_16.txt  runlist_17.txt  runlist_18.txt  runlist_19.txt  runlist_21.txt  runlist_22.txt  runlist_23.txt  runlist_24.txt  runlist_26.txt  runlist_27.txt  runlist_28.txt  runlist_29.txt  runlist_34.txt  runlist_41.txt  runlist_42.txt  runlist_43.txt  runlist_44.txt  runlist_45.txt  runlist_5.txt  runlist_50.txt  runlist_52.txt  runlist_7.txt  runlist_8.txt  runlist_9.txt
Extensions/ValerianROOT/runlists/Octants/: R2_37_R3_37.txt  R2_37_R3_73.txt  R2_51_R3_51.txt
Extensions/ValerianROOT/runlists/Octants/R2/: R2Pkg1_2_R2Pkg2_6.txt  R2Pkg1_3_R2Pkg2_7.txt  R2Pkg1_5_R2Pkg2_1.txt  R2Pkg1_6_R2Pkg2_2.txt
Extensions/ValerianROOT/runlists/Octants/R3/: R3Pkg1_3_R3Pkg2_7.txt  R3Pkg1_4_R3Pkg2_8.txt  R3Pkg1_5_R3Pkg2_1.txt  R3Pkg1_6_R3Pkg2_2.txt  R3Pkg1_7_R3Pkg2_3.txt
Extensions/ValerianROOT/runlists/QTOR/: QTOR_0.txt  QTOR_2000.txt  QTOR_300.txt  QTOR_6700.txt  QTOR_6720.txt  QTOR_8800.txt  QTOR_8820.txt  QTOR_8840.txt  QTOR_8860.txt  QTOR_8880.txt  QTOR_8900.txt  QTOR_8901.9.txt  QTOR_8920.txt  QTOR_8921.txt  QTOR_8940.txt  QTOR_8960.txt  QTOR_8980.txt  QTOR_9000.txt  QTOR_9020.txt  QTOR_9040.txt  QTOR_9060.txt  QTOR_9080.txt  QTOR_9100.txt  QTOR_CurrentValues.txt
Extensions/ValerianROOT/runlists/SpecialRuns/: runlist_100.txt  runlist_90.txt  runlist_91.txt  runlist_93.txt  runlist_94.txt  runlist_95.txt  runlist_96.txt  runlist_97.txt  runlist_98.txt  runlist_99.txt
Extensions/ValerianROOT/scripts/: Angle.pl  BeamPositionX.pl  BeamPositionY.pl  Chi.pl  CountingPackages.sh  Everything_vs_position_on_bar.pl  GoodTracks.pl  LogChi.pl  NumTriggers.pl  OctantDetermination_R2_pkg1.pl  OctantDetermination_R2_pkg2.pl  OctantDetermination_R3_pkg1.pl  OctantDetermination_R3_pkg2.pl  PercentGood.pl  PhiMatch.pl  PhiProjMatch.pl  Q2_WithLoss.pl  Q2_WithOutLoss.pl  Q2_with_cuts.pl  QTOR.pl  R3_Partial_Tracks_match_up_Chi2.pl  R3_Partial_Tracks_match_up_Slope.pl  R3_Tracks_match_up_Chi2.pl  R3_Tracks_match_up_Slope.pl  R3_Treeline_match_up_Chi2.pl  R3_Treeline_match_up_Slope.pl  R3_offsets_Phi.pl  R3_offsets_Theta.pl  RawTracks.pl  Residual.pl  ScatteringEnergy.pl  ThetaMatch.pl  ThetaProjMatch.pl  get_run_list.sh
Extensions/ValerianROOT/src/: Angle.cc  BeamPositionX.cc  BeamPositionY.cc  Chi.cc  GoodTrack.cc  LogChi.cc  NTrigger.cc  PartialTrackChi2.cc  PartialTrackSlope.cc  PercentGood.cc  PosOnBar.cc  Q2PhiMatch.cc  Q2PhiMatchProj.cc  Q2ThetaMatch.cc  Q2ThetaMatchProj.cc  Q2WithCut.cc  Q2WithLoss.cc  Q2WithOutLoss.cc  QTOR.cc  R2Pkg1.cc  R2Pkg2.cc  R3PhiOffset.cc  R3Pkg1.cc  R3Pkg2.cc  R3ThetaOffset.cc  RawTrack.cc  Residual.cc  Run.cc  ScatEnergy.cc  TrackChi2.cc  TrackSlope.cc  TreelineChi2.cc  TreelineSlope.cc
PerformanceResult/: Readme  average.awk  perform.sh
SetupFiles/: .QwSetup.bash  .QwSetup.csh  .Qwbashrc  .Qwcshrc  .Qwcshrc_scratch  checkrootversion  make_SET_ME_UP  make_SET_ME_UP.bash  make_SET_ME_UP.csh  make_scratch_dir
Tests/: 003_qwanalysis.sh
Tracking/: Documentation.txt
coda/: Makefile  THaCodaData.d  THaCodaFile.d
evio/: Makefile
hermes/: configure
old/: anlysis.C_20110331  beammod.hh_20110415  beammod.hh_20110420  mdasymslope.C_20110419  qwanalysis.C_20110331a  qwanalysis.C_20110401  qwanalysis.C_20110402  qwanalysis.C_20110403  qwanalysis.C_20110404a  qwanalysis.C_20110404b  qwanalysis.C_20110404c  qwanalysis.C_20110404d  qwanalysis.C_20110404e  qwanalysis.C_20110404f  qwanalysis.C_20110408  qwanalysis.C_20110409b  qwanalysis.C_20110410  qwanalysis.C_20110412  qwanalysis.C_20110413  qwanalysis.C_20110414a  qwanalysis.C_20110414b  qwanalysis.C_20110420  qwanalysis.C_20110422  qwanalysis_test.C_20110401  qwanalysis_test.C_20110405  test.C
trunk/: Doxyfile  GNUmakefile  qweak-config.in
(+6631 files in other folders)
